# sdl-station

./: .gitignore  .nvim.lua  CMakeLists.txt  Makefile  core-logs-settings.d2  core-utils.d2  core.d2  issues.md
app/: CMakeLists.txt  sdl-station
app/src/: main.cpp
core/: CMakeLists.txt  deps.d2
core/src/: ImageIO.cpp  ImageIO.h  LocaleES.cpp  LocaleES.h  Log.cpp  Log.h  Paths.cpp  Paths.h  Scripting.cpp  Scripting.h  Settings.cpp  Settings.h  SystemConf.cpp  SystemConf.h
core/src/math/: Misc.cpp  Misc.h  Transform4x4f.cpp  Transform4x4f.h  Vector2f.cpp  Vector2f.h  Vector2i.h  Vector3f.cpp  Vector3f.h  Vector4f.cpp  Vector4f.h
core/src/renderers/: GlExtensions.cpp  GlExtensions.h  Renderer.cpp  Renderer.h  Renderer_GL21.cpp  Renderer_GL21.h  Renderer_GLES10.cpp  Renderer_GLES10.h  Renderer_GLES20.cpp  Renderer_GLES20.h  Shader.cpp  Shader.h
core/src/resources/: Font.cpp  Font.h  ResourceManager.cpp  ResourceManager.h  TextureData.cpp  TextureData.h  TextureDataManager.cpp  TextureDataManager.h  TextureResource.cpp  TextureResource.h
core/src/utils/: ConcurrentVector.h  Delegate.h  FileSystemUtil.cpp  FileSystemUtil.h  Platform.cpp  Platform.h
package/: Config.in  sdl-station.desc  sdl-station.mk
scripts/: graph_deps.py
